--- a/index.html
+++ b/index.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Web Developer Portfolio </title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header>
-    
-  </header>
-  <main>
-
-  </main>
-  <footer>
-
-  </footer>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Web Developer Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <h3 class="nav-title">ma<span class="text-primary">r</span>y</h3>
+        <ul>
+          <li><a href="">portfolio</a></li>
+          <li><a href="">blog</a></li>
+          <li><button>hire me</button></li>
+        </ul>
+      </nav>
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
