--- a/index.html
+++ b/index.html
@@ -26,18 +26,25 @@
         <div class="banner-content">
           <h3 class="banner-greeting">Hi, I am</h3>
           <h3 class="banner-title">Mary Hardy</h3>
-          <p class="banner-desc">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-         <button class="btn-primary">Download CV</button>
-         <button class="btn-primary">Contact</button>
+          <p class="banner-desc">
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments.
+          </p>
+          <button class="btn-primary">Download CV</button>
+          <button class="btn-primary">Contact</button>
         </div>
-        <img src="images/hardy.png" class="profile-pic" alt="banner-img">
+        <img src="images/hardy.png" class="profile-pic" alt="banner-img" />
       </div>
     </header>
     <main>
       <section class="about">
         <h3 class="section-title">About Me</h3>
         <p class="section-desc">
-          I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
+          I, m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and slick websites that provide real value to
+          the end user. Thousands of clients have procured exceptional resulfs
+          while working with me. Delivering work within time and budget which
+          meets clients requirements in our mata.
         </p>
         <div class="about-info-container">
           <div class="about-info">
@@ -45,7 +52,7 @@
             <p class="info-description">Mary Hardy</p>
           </div>
           <div class="about-info">
-            <h4 class="info-title">Emal: </h4>
+            <h4 class="info-title">Emal:</h4>
             <p class="info-description">abc@gmail.com</p>
           </div>
           <div class="about-info">
@@ -56,6 +63,140 @@
             <h4 class="info-title">From :</h4>
             <p class="info-description">Los Angeles, USA</p>
           </div>
+        </div>
+      </section>
+      <!-- what i do section  -->
+      <section>
+        <h3 class="section-title">What I Do</h3>
+        <p class="section-desc" id="what-i-do-description">
+          I have more than 10 years experience building software for clients all
+          over the world. Below is a quick overview of my main technical skill
+          sets and technologies i use. Want to find out more about my
+          experience? Check out my online resume and project portfolio.
+        </p>
+        <div class="skills-container">
+          <div class="skill">
+            <img src="/images/icons/js.png" alt="skill-img" />
+            <h3 class="skill-title">Vanilla JavaScript</h3>
+            <p class="skill-desc">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="/images/icons/react.png" alt="skill-img" />
+            <h3 class="skill-title">Angular, React & Vue</h3>
+            <p class="skill-desc">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="/images/icons/nodejs.png" alt="skill-img" />
+            <h3 class="skill-title">Node.js</h3>
+            <p class="skill-desc">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="/images/icons/mongo.png" alt="skill-img" />
+            <h3 class="skill-title">Python & Django</h3>
+            <p class="skill-desc">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- resume section -->
+      <section>
+        <h3 class="section-title">A summery of my resume</h3>
+        <div class="resume-container">
+          <div class="resume-column">
+            <h3 class="resume-column-title">My Education</h3>
+
+            <div class="resume-item">
+              <h2 class="resume-item-title">Master in computer science</h2>
+              <h3 class="resume-item-institute">
+                Harvard University / 2015 - 2017
+              </h3>
+              <p class="resume-item-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Corporis ea ab aut fugit excepturi quae provident nihil a,
+                eveniet perspiciatis?
+              </p>
+            </div>
+            <hr />
+            <div class="resume-item">
+              <h2 class="resume-item-title">Master in computer science</h2>
+              <h3 class="resume-item-institute">
+                Harvard University / 2015 - 2017
+              </h3>
+              <p class="resume-item-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Corporis ea ab aut fugit excepturi quae provident nihil a,
+                eveniet perspiciatis?
+              </p>
+            </div>
+            <hr />
+            <div class="resume-item">
+              <h2 class="resume-item-title">Master in computer science</h2>
+              <h3 class="resume-item-institute">
+                Harvard University / 2015 - 2017
+              </h3>
+              <p class="resume-item-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Corporis ea ab aut fugit excepturi quae provident nihil a,
+                eveniet perspiciatis?
+              </p>
+            </div>
+          </div>
+          <div class="resume-column">
+            <h3 class="resume-column-title">My Experience</h3>
+            <div class="resume-item">
+              <h2 class="resume-item-title">Master in computer science</h2>
+              <h3 class="resume-item-institute">
+                Harvard University / 2015 - 2017
+              </h3>
+              <p class="resume-item-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Corporis ea ab aut fugit excepturi quae provident nihil a,
+                eveniet perspiciatis?
+              </p>
+            </div>
+            <hr />
+            <div class="resume-item">
+              <h2 class="resume-item-title">Master in computer science</h2>
+              <h3 class="resume-item-institute">
+                Harvard University / 2015 - 2017
+              </h3>
+              <p class="resume-item-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Corporis ea ab aut fugit excepturi quae provident nihil a,
+                eveniet perspiciatis?
+              </p>
+            </div>
+            <hr />
+            <div class="resume-item">
+              <h2 class="resume-item-title">Master in computer science</h2>
+              <h3 class="resume-item-institute">
+                Harvard University / 2015 - 2017
+              </h3>
+              <p class="resume-item-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Corporis ea ab aut fugit excepturi quae provident nihil a,
+                eveniet perspiciatis?
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="download-cv">
+          <button class="btn-primary">Download Cv</button>
         </div>
       </section>
     </main>
