--- a/index.html
+++ b/index.html
@@ -200,6 +200,19 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-column">
+        <h3 class="section-title">Let's Connect</h3>
+        <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, unde. Nobis autem quae, ad recusandae nesciunt nostrum repellat maiores ullam.</p>
+        <div class="social-links">
+          <a href=""><img src="images/icons/facebook.png" alt=""></a>
+          <a href=""><img src="images/icons/insta.png" alt=""></a>
+          <a href=""><img src="images/icons/twitter.png" alt=""></a>
+        </div>
+      </div>
+      <div class="footer-column">
+        <h3 class="section-title">Let's Message</h3>
+      </div>
+    </footer>
   </body>
 </html>
