--- a/index.html
+++ b/index.html
@@ -212,6 +212,12 @@
       </div>
       <div class="footer-column">
         <h3 class="section-title">Let's Message</h3>
+        <form action="" class="contact">
+          <input type="text" placeholder="Your name">
+          <input type="email" placeholder="Your email">
+          <textarea name="" id="" cols="30" rows="10">Message</textarea>
+          <input type="submit" value="Submit" class="btn-primary">
+        </form>
       </div>
     </footer>
   </body>
