--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </p>
         <div class="skills-container">
           <div class="skill">
-            <img src="/images/icons/js.png" alt="skill-img" />
+            <img src="./images/icons/js.png" alt="skill-img" />
             <h3 class="skill-title">Vanilla JavaScript</h3>
             <p class="skill-desc">
               List skill/technologies here. You can change the icon above to any
@@ -85,7 +85,7 @@
             </p>
           </div>
           <div class="skill">
-            <img src="/images/icons/react.png" alt="skill-img" />
+            <img src="./images/icons/react.png" alt="skill-img" />
             <h3 class="skill-title">Angular, React & Vue</h3>
             <p class="skill-desc">
               List skill/technologies here. You can change the icon above to any
@@ -94,7 +94,7 @@
             </p>
           </div>
           <div class="skill">
-            <img src="/images/icons/nodejs.png" alt="skill-img" />
+            <img src="./images/icons/nodejs.png" alt="skill-img" />
             <h3 class="skill-title">Node.js</h3>
             <p class="skill-desc">
               List skill/technologies here. You can change the icon above to any
@@ -103,7 +103,7 @@
             </p>
           </div>
           <div class="skill">
-            <img src="/images/icons/mongo.png" alt="skill-img" />
+            <img src="./images/icons/mongo.png" alt="skill-img" />
             <h3 class="skill-title">Python & Django</h3>
             <p class="skill-desc">
               List skill/technologies here. You can change the icon above to any
